--- a/index.html
+++ b/index.html
@@ -261,9 +261,12 @@ Generato da GiuliaAI :3
           <h2>Giochi</h2>
           <p><strong>GiuliaAI</strong> non è solo un'intelligenza artificiale per lo streaming, ma ha anche la capacità di giocare a diversi giochi.
             Abile in <strong>osu!</strong>, dove dimostra riflessi rapidi e precisione nel colpire i beat al ritmo della musica.
-            Può sfidare gli utenti agli <strong>scacchi</strong>, mostrando una comprensione strategica del gioco. In <strong>Among Us</strong>, riesce ad adattarsi ai vari scenari, giocando sia come impostore che come membro dell'equipaggio.<br>
-            Nel mondo di <strong>Minecraft</strong>, esplora e interagisce creativamente con l'ambiente. Inoltre, è capace di gestire le sfide di <strong>Keep Talking and Nobody Explodes</strong>, coordinandosi efficacemente con i giocatori per disinnescare le bombe.
-            </p>
+            Può sfidare gli utenti agli <strong>scacchi</strong>, mostrando una comprensione strategica del gioco. In <strong>Among Us</strong>, riesce ad adattarsi ai vari scenari,
+            giocando sia come impostore che come membro dell'equipaggio. Nel mondo di <strong>Minecraft</strong>, esplora e interagisce creativamente con l'ambiente.
+            Inoltre, è capace di gestire le sfide di <strong>Keep Talking and Nobody Explodes</strong>, coordinandosi efficacemente con i giocatori per disinnescare le bombe.
+            <strong>GiuliaAI</strong> è anche abile a giocare a <strong>Tetris</strong>, mostrando velocità e precisione nel posizionamento dei pezzi. Nel competitivo <strong>Pokémon Showdown</strong>,
+            dimostra una profonda conoscenza delle strategie di battaglia. Infine, si diverte a giocare a <strong>Gartic Phone</strong>, interpretando e disegnando con creatività e umorismo.</p>
+
           <img src="assets/img/webp/giuliai-keeptalkingandnobodyexploses.webp" class="img-fluid" style="margin-bottom: 30px; padding-top: 30px;" alt="">
 
 
@@ -533,7 +536,7 @@ Generato da GiuliaAI :3
 
   <!-- TEMP -->
   <div id="alertBox" class="alert alert-info alert-dismissible fixed-bottom mb-0" role="alert">
-    Aiutaci a crescere! Se desideri contribuire al miglioramento del sito, visita il nostro progetto su <a href="https://github.com/nicolapanegos/GiuliaAI-Website" class="alert-link"><i class="bx bxl-github">GitHub</i></a>.
+    Questo sito utilizza i cookie per migliorare l'esperienza utente. Continuando la navigazione, accetti la nostra politica sulla privacy e l'uso dei cookie. <a href="https://github.com/GiuliaAI/legal">Legal & Privacy Notice</a>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Chiudi"></button>
   </div>
   
@@ -549,12 +552,13 @@ Generato da GiuliaAI :3
       <p style="padding-bottom: 5px; margin-bottom: 5px;">Per maggiori informazioni: <i>giuliaaiofficial@gmail.com</i> - I miei link: <a href="https://linktr.ee/giuliaai">linktr.ee/giuliaai</a>
       <br>(^._.^)ﾉ
       <br><i><strong>MADE WITH ❤️ BY il_Nikk</strong></i></p>
-      <p style="padding-bottom: 5px; margin-bottom: 5px;"><a href="https://github.com/nicolapanegos/GiuliaAI-Website" class="github"><i class="bx bxl-github">GitHub</i></a></p>
+      <p style="padding-bottom: 5px; margin-bottom: 5px;"><a href="https://github.com/GiuliaAI" class="github"><i class="bx bxl-github">GitHub</i></a></p>
         
       <div class="copyright">
           &copy;2024 <strong><span>GiuliaAI</span></strong>. Tutti i diritti sono riservati.<br>
           I contenuti di questo sito possono essere distribuiti e condivisi, a condizione che venga dato il giusto riconoscimento a <i>GiuliaAI</i> come fonte originale.<br>
-          È vietata qualsiasi modifica o uso commerciale dei contenuti senza il consenso scritto dell'autore.
+          È vietata qualsiasi modifica o uso commerciale dei contenuti senza il consenso scritto dell'autore.<br>
+          <a href="https://github.com/GiuliaAI/legal">Legal & Privacy Notice</a>
       </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
